--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://admin:kkidgamer@myprojects.ouutgao.mongodb.net/EMISdb?retryWrites=true&w=majority&appName=Myprojects
+# MONGO_URI=mongodb+srv://admin:kkidgamer@myprojects.ouutgao.mongodb.net/EMISdb?retryWrites=true&w=majority&appName=Myprojects
+MONGO_URI=mongodb://127.0.0.1:27017/EMISdb
 JWT_SECRET="TRUYFGUG645E4@!$532"
